# configINIt

./: .gitignore  CMakeLists.txt  README.md  configINIt.code-workspace  configINIt.hpp
test/: config.ini  main.cpp
